--- a/README
+++ b/README
@@ -17,7 +17,7 @@ New features:
     is disabled.  This is for the situation where there is an encoder, but it
     needs to be disabled so that the motor can do backlash correction properly.
     By monitoring the encoder position, the user can see whether the motor has
-    suffient driving power so that it will not miss steps (MISS = 1 or not).
+    sufficient driving power so that it will not miss steps (MISS = 1 or not).
 
  3) Support caput callback.
 
