Force to "Re-initialize" when controller comes online after iocInit or goes offline and comes back more than a few minutes later when the automatic "ping" kicks in.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/IMS/current@27220 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/README
+++ b/README
@@ -1,10 +1,18 @@
-ims Record R2-1-0 Release Notice
+ims Record R2-2-0 Release Notice
 ================================================================================
 
 The ims dedicated record software in this release is a re-write/simplification
 based on motor record R6-4-4, without the general abstraction layers of device
 support and driver support.  It conforms to the original motor record interface,
 and is compatible with EPICS base R3-14-12.
+
+Modification Log from R2-1-0 to R2-2-0
+======================================
+
+Bug fixes:
+ 1) Force to "Re-initialize" when controller comes online after iocInit
+    or goes offline and comes back more than a few minutes later when the
+    automatic "ping" kicks in.
 
 Modification Log from R2-0-0 to R2-1-0
 ======================================
